Search results preserved between screen modes + Styling changes to make matched selections more visible + Fix toolbar position

--- a/desktop/cmp/input/CodeInput.scss
+++ b/desktop/cmp/input/CodeInput.scss
@@ -14,6 +14,11 @@
     box-shadow: inset 0 0 0 0 rgba(16, 22, 26, 0.4);
     -webkit-box-shadow: inset 0 0 0 0 rgba(16, 22, 26, 0.4);
   }
+
+  .selection-highlight {
+    color: black !important;
+    background-color: var(--xh-match-highlight);
+  }
 }
 
 .xh-code-input {
@@ -37,6 +42,10 @@
     flex: 1;
     display: flex;
     flex-direction: column;
+
+    .CodeMirror-selected {
+      background-color: var(--xh-selected-highlight);
+    }
 
     .CodeMirror-scroll {
       flex: 1;
@@ -82,8 +91,8 @@
   &__toolbar {
     position: absolute !important;
     padding: 0 !important;
-    bottom: 0;
-    right: 0;
+    bottom: var(--xh-scrollbar-size-px);
+    right: var(--xh-scrollbar-size-px);
     z-index: 3; // render on top of code-mirror content to enable click
 
     .xh-button {
@@ -114,9 +123,6 @@
     // See https://dfmcphee.com/flex-items-and-min-width-0/
     width: 0;
     min-width: 0;
-  }
-}
 
-.selection-highlight {
-  background-color: var(--xh-selected-highlight);
+  }
 }
